include ProjectileModel in .csproj

--- a/SimpleSimulator.csproj
+++ b/SimpleSimulator.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Models\**\*.cs" />
+    <Compile Include="Models\ProjectileModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.1" />
