--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,13 +37,13 @@ jobs:
           dotnet-version: '9.0.x'
 
       - name: Restore Dependencies
-        run: dotnet restore SimpleSimulator.csproj
+        run: dotnet restore src/SimpleSimulator.csproj
 
       - name: Build Project
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build src/SimpleSimulator.csproj --configuration Release --no-restore
 
       - name: Publish Executable
-        run: dotnet publish SimpleSimulator.csproj -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -o ./publish
+        run: dotnet publish src/SimpleSimulator.csproj -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -o ./publish
 
       - name: Rename Output Files (Windows)
         if: matrix.os == 'windows-latest'
