--- a/src/SimpleSimulator.csproj
+++ b/src/SimpleSimulator.csproj
@@ -20,5 +20,6 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="ReactiveUI" Version="20.1.63" />
   </ItemGroup>
 </Project>
