--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         run: dotnet build src/SimpleSimulator.csproj --configuration Release --no-restore
 
       - name: Publish Executable
-        run: dotnet publish src/SimpleSimulator.csproj -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -o ./publish
+        run: dotnet publish src/SimpleSimulator.csproj -c Release --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:IncludeAllContentForSelfExtract=true -o ./publish
 
       - name: Rename Output Files (Windows)
         if: matrix.os == 'windows-latest'
